--- a/web/index.html
+++ b/web/index.html
@@ -14,13 +14,13 @@
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/main.js"></script>
-
+        <script src="js/homePage.js" type="text/javascript"></script>
     </head>
     <body >
 
         <h1 class="text-center">Multiplication table</h1>
         <br>
-
+            <div id="page"></div>  
         <table id="multiplicationBoard"></table>
  
     </body>
