--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
     </head>
     <body >
 
-        <h1 class="text-center">Multiplication table</h1>
+        <h1 class="text-center text-primary">Multiplication table</h1>
         <br>
             <div id="page"></div>  
         <table id="multiplicationBoard"></table>
