--- a/web/index.html
+++ b/web/index.html
@@ -20,8 +20,9 @@
 
         <h1 class="text-center text-primary">Multiplication table</h1>
         <br>
-            <div id="page"></div>  
-        <table id="multiplicationBoard"></table>
- 
+        <div id="page"></div>  
+        <div class="container">
+            <table id="multiplicationBoard" class="table table-striped table-bordered" cellspacing="0" width="100%"></table>
+        </div>
     </body>
 </html>
